--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cryptomines/api",
-  "author": "Chia Network <hello@chia.net> (https://cryptominesblockchain.pl/)",
+  "author": "Kopalnie Krypto <kontakt@kopalniekrypto.pl> (https://cryptominesblockchain.pl/)",
   "description": "Cryptomines API Library",
   "productName": "Cryptomines Blockchain",
   "version": "1.0.0",
